@@ -1,9 +1,18 @@
 Version 1.53:
+	- Added primality proving of factors found (thanks David Cleaver /
+		Brian Gladman)
+	- Added a primality test for factors of NFS relations; apparently
+		the sieving tools will occasionally output relations with 
+		factors that are composite, and this may be the cause of
+		mysterious problems with extremely large jobs
+	- Added an old fix for potential memory corruption doing NFS filtering
+		with extremely large datasets, since the patch actually
+		saved a factorization from failing (thanks Greg Childers)
 	- Fixed more problems with >4GB files in windows (thanks Nooby)
 	- Simplify the inner loop of the QS hashtable sieving code;
 		modern processors run QS noticeably faster now
 		(thanks Mick Francis)
-	- Added a slight speedup for NFS relation parsing (thanks Lionel Deboux)
+	- Added a slight speedup for NFS relation parsing (thanks Lionel Debroux)
 
 Version 1.52: 2/4/14
 	- Added a major overhaul of the liner algebra; this uses the
